new/prusti/tests/pass/parse/result_arg.stderr
error: "it is not allowed to use the keyword `result` as a function argument"
 --> $DIR/result_arg.rs:5:14
  |
5 | pub fn test1(result: u32) -> u32 { result }
  |              ^^^^^^^^^^^

error: aborting due to previous error

